# view-temp

./: .gitmodules  CMakeLists.txt  imgui.ini
app/: CMakeLists.txt
app/examples/: CMakeLists.txt
app/mk0/: CMakeLists.txt
app/mk0/src/: main.cpp
app/mk1/: CMakeLists.txt
app/mk1/src/: main.cpp
app/mk2/: CMakeLists.txt
app/mk2/src/: main.cpp
app/mk3/: CMakeLists.txt
app/mk3/src/: main.cpp  plotter.hpp
app/mk4/: CMakeLists.txt
app/mk4-mouse/: CMakeLists.txt
app/mk4/src/: main.cpp
app/mk5-serial0/: CMakeLists.txt
app/mk5-serial0/src/: main.cpp  signal_processing.hpp
app/mk6-plotlib-test/: CMakeLists.txt
app/mk6-plotlib-test/src/: main.cpp  plotter.hpp
app/mk7-ble-vital-signal-processing/: CMakeLists.txt
app/mk7-ble-vital-signal-processing/src/: main.cpp
app/mk8-guitest/: CMakeLists.txt
app/mk8-guitest/src/: main.cpp
app/mk8-wifi-client-client_a/: CMakeLists.txt
app/mk8-wifi-client-client_a/src/: main.cpp  server.hpp
app/mk8-wifi-client_a/: CMakeLists.txt
app/mk8-wifi-client_a/src/: main.cpp  server.hpp
app/mk8-wifi-client_b/: CMakeLists.txt
app/mk8-wifi-client_b/src/: dummy.txt  main.cpp  server.hpp
app/mk9-wifi-device/: CMakeLists.txt
app/mk9-wifi-device/src/: main.cpp  server.hpp
app/mk9-wifi-view/: CMakeLists.txt
app/mk9-wifi-view/src/: main.cpp  server.hpp
app/scripts/: gen_signaldef.py
app/test0/: CMakeLists.txt
app/test0/src/: main.cpp
app/test1/: CMakeLists.txt
lib/: CMakeLists.txt
lib/audio-stream/: CMakeLists.txt
lib/audio-stream/include/: audio-stream.hpp
lib/ble-vital-client/: CMakeLists.txt
lib/ble-vital-client/include/: ble-vital-client.hpp
lib/esp32-fft/main/: test_fft.c
lib/esp32-fft/src/: fft.c
lib/plotlib/: CMakeLists.txt
lib/plotlib/include/: plotlib.hpp
lib/rs232-stream/: CMakeLists.txt
lib/rs232-stream/include/: rs232-stream.hpp
lib/signal/: CMakeLists.txt
lib/signal/include/: fixed_point.hpp  signal.hpp
src/: main.cpp
